Add parser, not tested

--- a/cop5556fa19/cop5556fa19/.gitignore
+++ b/cop5556fa19/cop5556fa19/.gitignore
@@ -5,3 +5,6 @@
 /Token.class
 /package-info.class
 /Scanner$State.class
+/ExpressionParser$SyntaxException.class
+/ExpressionParser.class
+/ExpressionParserTest.class
