--- a/cop5556fa19/cop5556fa19/.gitignore
+++ b/cop5556fa19/cop5556fa19/.gitignore
@@ -8,3 +8,5 @@
 /ExpressionParser$SyntaxException.class
 /ExpressionParser.class
 /ExpressionParserTest.class
+/Parser$SyntaxException.class
+/Parser.class
