--- a/cop5556fa19/cop5556fa19/AST/.gitignore
+++ b/cop5556fa19/cop5556fa19/AST/.gitignore
@@ -25,3 +25,24 @@
 /FunctionCall.class
 /Name.class
 /ParList.class
+/Chunk.class
+/ExpFunctionCall.class
+/ExpTableLookup.class
+/Labels.class
+/RetStat.class
+/Stat.class
+/StatAssign.class
+/StatBreak.class
+/StatDo.class
+/StatFor.class
+/StatForEach.class
+/StatFunction.class
+/StatGoto.class
+/StatIf.class
+/StatLabel.class
+/StatLocalAssign.class
+/StatLocalFunc.class
+/StatRepeat.class
+/StatWhile.class
+/TableDeref.class
+/Var.class
