most tests passed

--- a/cop5556fa19/interpreter/.gitignore
+++ b/cop5556fa19/interpreter/.gitignore
@@ -11,3 +11,9 @@
 /LuaTable.class
 /LuaValue.class
 /StaticSemanticException.class
+/StaticAnalysis.class
+/StaticAnalysis$StaticAnalysisException.class
+/ASTVisitorAdapter$GotoException.class
+/ASTVisitorAdapter$ReturnException.class
+/ASTVisitorAdapter$InLoopBreakException.class
+/ASTVisitorAdapter$BreakException.class
