All test passed

--- a/cop5556fa19/interpreter/.gitignore
+++ b/cop5556fa19/interpreter/.gitignore
@@ -17,3 +17,4 @@
 /ASTVisitorAdapter$ReturnException.class
 /ASTVisitorAdapter$InLoopBreakException.class
 /ASTVisitorAdapter$BreakException.class
+/ASTVisitorAdapter$TableLookupException.class
